force-app/main/default/objects/Vehicle__c/fields/Chasis_number__c.field-meta.xml
<CustomField>
    <fullName>Chasis_number__c</fullName>
    <label>Chasis number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>