force-app/main/default/objects/Vehicle__c/fields/DT_Cancellation_Date__c.field-meta.xml
<CustomField>
    <fullName>DT_Cancellation_Date__c</fullName>
    <label>Cancellation Date</label>
    <type>DateTime</type>
</CustomField>