force-app/main/default/objects/Vehicle__c/fields/DT_Car_Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>DT_Car_Registration_Date__c</fullName>
    <label>Car Registration Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>