force-app/main/default/objects/Vehicle__c/fields/DT_Next_ITV_Revision_Date__c.field-meta.xml
<CustomField>
    <fullName>DT_Next_ITV_Revision_Date__c</fullName>
    <label>Next ITV Revision Date</label>
    <type>Date</type>
</CustomField>