force-app/main/default/objects/Vehicle__c/fields/DT_Warranty_Date__c.field-meta.xml
<CustomField>
    <fullName>DT_Warranty_Date__c</fullName>
    <label>Warranty Date</label>
    <type>Date</type>
</CustomField>