force-app/main/default/objects/Vehicle__c/fields/PK_Fuel_Type__c.field-meta.xml
<CustomField>
    <fullName>PK_Fuel_Type__c</fullName>
    <label>Fuel Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Diesel Oil</fullName>
            </value>
            <value>
                <fullName>Fuel Oil</fullName>
            </value>
            <value>
                <fullName>Solar Oil</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>