force-app/main/default/objects/Vehicle__c/fields/PK_Vehicle_Brand__c.field-meta.xml
<CustomField>
    <fullName>PK_Vehicle_Brand__c</fullName>
    <label>Vehicle Brand</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Vehicle_Brands</valueSetName>
    </valueSet>
</CustomField>