force-app/main/default/objects/Vehicle__c/fields/PK_Vehicle_Model__c.field-meta.xml
<CustomField>
    <fullName>PK_Vehicle_Model__c</fullName>
    <label>Vehicle Model</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>PK_Vehicle_Brand__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ILX</fullName>
            </value>
            <value>
                <fullName>MDX</fullName>
            </value>
            <value>
                <fullName>MDX Sport Hybrid</fullName>
            </value>
            <value>
                <fullName>NSX</fullName>
            </value>
            <value>
                <fullName>RDX</fullName>
            </value>
            <value>
                <fullName>RLX</fullName>
            </value>
            <value>
                <fullName>RLX Sport Hybrid</fullName>
            </value>
            <value>
                <fullName>TLX</fullName>
            </value>
            <value>
                <fullName>4C Spider</fullName>
            </value>
            <value>
                <fullName>Giulia</fullName>
            </value>
            <value>
                <fullName>Stelvio</fullName>
            </value>
            <value>
                <fullName>A3</fullName>
            </value>
            <value>
                <fullName>A4</fullName>
            </value>
            <value>
                <fullName>A5</fullName>
            </value>
            <value>
                <fullName>A6</fullName>
            </value>
            <value>
                <fullName>A6 allroad</fullName>
            </value>
            <value>
                <fullName>A7</fullName>
            </value>
            <value>
                <fullName>Q3</fullName>
            </value>
            <value>
                <fullName>Q5</fullName>
            </value>
            <value>
                <fullName>Q7</fullName>
            </value>
            <value>
                <fullName>Q8</fullName>
            </value>
            <value>
                <fullName>R8</fullName>
            </value>
            <value>
                <fullName>S4</fullName>
            </value>
            <value>
                <fullName>S8</fullName>
            </value>
            <value>
                <fullName>SQ5</fullName>
            </value>
            <value>
                <fullName>TT</fullName>
            </value>
            <value>
                <fullName>2 Series</fullName>
            </value>
            <value>
                <fullName>3 Series</fullName>
            </value>
            <value>
                <fullName>4 Series</fullName>
            </value>
            <value>
                <fullName>5 Series</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>