force-app/main/default/objects/Vehicle__c/fields/TX_Car_Number_Plate__c.field-meta.xml
<CustomField>
    <fullName>TX_Car_Number_Plate__c</fullName>
    <label>Car Number Plate</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>