force-app/main/default/objects/Vehicle__c/validationRules/VR_CarNumberPlate.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_CarNumberPlate</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX( TX_Car_Number_Plate__c  , &quot;^[0-9]{1,4}(?!.*(LL|CH))[BCDFGHJKLMNPRSTVWXYZ]{3}&quot;))</errorConditionFormula>
    <errorDisplayField>TX_Car_Number_Plate__c</errorDisplayField>
    <errorMessage>Matrícula errónea</errorMessage>
</ValidationRule>