force-app/main/default/objects/Vehicle__c/validationRules/VR_NextITVRevisionDate.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_NextITVRevisionDate</fullName>
    <active>true</active>
    <errorConditionFormula>DT_Next_ITV_Revision_Date__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>DT_Next_ITV_Revision_Date__c</errorDisplayField>
    <errorMessage>Cannot set a past date.</errorMessage>
</ValidationRule>