force-app/main/default/objects/Vehicle__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>TX_Car_Number_Plate__c</columns>
    <columns>NAME</columns>
    <columns>LK_Vehicle_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>